first commit in a while

--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.0.0-beta.1",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
     "@reach/router": "^1.2.1",
+    "@reduxjs/toolkit": "1.3.0-beta.1",
     "@types/jest": "24.0.12",
-    "@types/node": "12.0.0",
-    "@types/react": "16.8.17",
-    "@types/react-dom": "16.8.4",
+    "@types/node": "^12.0.0",
+    "@types/react": "16.9.25",
+    "@types/react-dom": "16.9.25",
     "@types/react-router-dom": "^4.3.3",
+    "@vx/axis": "^0.0.190",
+    "@vx/group": "^0.0.190",
+    "@vx/mock-data": "^0.0.189",
+    "@vx/scale": "^0.0.190",
+    "@vx/shape": "^0.0.190",
+    "@vx/tooltip": "^0.0.189",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.4.0",
     "d3": "^5.9.2",
@@ -18,17 +25,19 @@
     "highcharts-react-official": "^2.1.3",
     "history": "^4.9.0",
     "hoist-non-react-statics": "^3.3.0",
-    "material-ui-chip-input": "^1.0.0-beta.16",
+    "material-ui-chip-input": "^1.1.0",
     "query-string": "^6.5.0",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
+    "react-debounce-input": "^3.2.0",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0-alpha.4",
-    "react-router": "^5.0.0",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.0.1",
-    "react-window": "^1.8.2",
-    "react-window-infinite-loader": "^1.0.3",
-    "recharts": "^1.6.2",
-    "redux": "^4.0.1",
+    "react-use-dimensions": "^1.2.1",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
+    "recharts": "^1.8.5",
+    "redux": "^4.0.5",
     "redux-first-history": "^4.0.3",
     "redux-thunk": "^2.3.0",
     "typescript": "3.4.5",
