--- a/package.json
+++ b/package.json
@@ -1,67 +1,70 @@
 {
-  "name": "grant_explorer",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@reach/router": "^1.2.1",
-    "@reduxjs/toolkit": "1.3.0-beta.1",
-    "@types/jest": "24.0.12",
-    "@types/node": "^12.0.0",
-    "@types/react": "16.9.25",
-    "@types/react-dom": "16.9.25",
-    "@types/react-router-dom": "^4.3.3",
-    "@vx/axis": "^0.0.190",
-    "@vx/group": "^0.0.190",
-    "@vx/mock-data": "^0.0.189",
-    "@vx/scale": "^0.0.190",
-    "@vx/shape": "^0.0.190",
-    "@vx/tooltip": "^0.0.189",
-    "classnames": "^2.2.6",
-    "connected-react-router": "^6.4.0",
-    "d3": "^5.9.2",
-    "highcharts": "^7.1.1",
-    "highcharts-react-official": "^2.1.3",
-    "history": "^4.9.0",
-    "hoist-non-react-statics": "^3.3.0",
-    "material-ui-chip-input": "^1.1.0",
-    "query-string": "^6.5.0",
-    "react": "^16.13.1",
-    "react-debounce-input": "^3.2.0",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-scripts": "3.0.1",
-    "react-use-dimensions": "^1.2.1",
-    "react-window": "^1.8.5",
-    "react-window-infinite-loader": "^1.0.5",
-    "recharts": "^1.8.5",
-    "redux": "^4.0.5",
-    "redux-first-history": "^4.0.3",
-    "redux-thunk": "^2.3.0",
-    "typescript": "3.4.5",
-    "victory": "^32.2.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "grant_explorer",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^4.9.7",
+        "@material-ui/icons": "^4.9.1",
+        "@reach/router": "^1.2.1",
+        "@reduxjs/toolkit": "^1.6.1",
+        "@types/jest": "24.0.12",
+        "@types/node": "^12.0.0",
+        "@types/react": "^17.0.15",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-router-dom": "^4.3.3",
+        "@vx/axis": "^0.0.190",
+        "@vx/group": "^0.0.190",
+        "@vx/mock-data": "^0.0.189",
+        "@vx/scale": "^0.0.190",
+        "@vx/shape": "^0.0.190",
+        "@vx/tooltip": "^0.0.189",
+        "classnames": "^2.2.6",
+        "connected-react-router": "^6.4.0",
+        "d3": "^5.9.2",
+        "highcharts": "^7.1.1",
+        "highcharts-react-official": "^2.1.3",
+        "history": "^4.9.0",
+        "hoist-non-react-statics": "^3.3.0",
+        "material-ui-chip-input": "^1.1.0",
+        "query-string": "^6.5.0",
+        "react": "^17.0.2",
+        "react-debounce-input": "^3.2.0",
+        "react-dom": "^16.8.6",
+        "react-redux": "^7.2.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.2",
+        "react-use-dimensions": "^1.2.1",
+        "react-window": "^1.8.5",
+        "react-window-infinite-loader": "^1.0.5",
+        "recharts": "^1.8.5",
+        "redux-first-history": "^4.0.3",
+        "typescript": "^4.2.4",
+        "victory": "^32.2.3"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/recharts": "^2.0.0",
+        "openapi-typescript-codegen": "^0.9.3"
+    }
 }
