--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     ],
     "react/react-in-jsx-scope": "off",
     "react/display-name": "off",
-    "@typescript-eslint/explicit-function-return-type": "off"
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
