--- a/package.json
+++ b/package.json
@@ -5,21 +5,16 @@
     "dependencies": {
         "@material-ui/core": "^4.9.7",
         "@material-ui/icons": "^4.9.1",
-        "@reach/router": "^1.2.1",
         "@reduxjs/toolkit": "^1.6.1",
+        "@types/d3": "^7.0.0",
         "@types/jest": "24.0.12",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
         "@types/react-router-dom": "^4.3.3",
-        "@vx/axis": "^0.0.190",
-        "@vx/group": "^0.0.190",
         "@vx/mock-data": "^0.0.189",
         "@vx/scale": "^0.0.190",
-        "@vx/shape": "^0.0.190",
-        "@vx/tooltip": "^0.0.189",
         "classnames": "^2.2.6",
-        "connected-react-router": "^6.4.0",
         "d3": "^5.9.2",
         "highcharts": "^7.1.1",
         "highcharts-react-official": "^2.1.3",
@@ -36,10 +31,8 @@
         "react-scripts": "4.0.2",
         "react-window": "^1.8.5",
         "react-window-infinite-loader": "^1.0.5",
-        "recharts": "^1.8.5",
-        "redux-first-history": "^4.0.3",
-        "typescript": "^4.2.4",
-        "victory": "^32.2.3"
+        "recharts": "^2.0.10",
+        "typescript": "^4.2.4"
     },
     "scripts": {
         "start": "react-scripts start",
