--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
         "@types/react-router-dom": "^4.3.3",
+        "@types/redux-logger": "^3.0.9",
         "@vx/mock-data": "^0.0.189",
         "@vx/scale": "^0.0.190",
         "classnames": "^2.2.6",
@@ -32,6 +33,7 @@
         "react-window": "^1.8.5",
         "react-window-infinite-loader": "^1.0.5",
         "recharts": "^2.0.10",
+        "redux-logger": "^3.0.6",
         "typescript": "^4.2.4"
     },
     "scripts": {
