--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,26 @@
-starlette
-gensim
-aioelasticsearch
-aiofiles
+aioelasticsearch==0.7.0
+aiofiles==0.7.0
+aiohttp==3.7.4.post0
+anyio==3.3.0
+asgiref==3.4.1
+async-timeout==3.0.1
+attrs==21.2.0
+certifi==2021.5.30
+chardet==4.0.0
+click==8.0.1
+elasticsearch==7.14.0
+fastapi==0.68.0
+gensim==4.0.1
+h11==0.12.0
+idna==3.2
+multidict==5.1.0
+numpy==1.21.1
+pydantic==1.8.2
+scipy==1.7.1
+smart-open==5.1.0
+sniffio==1.2.0
+starlette==0.14.2
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+uvicorn==0.14.0
+yarl==1.6.3
