docker compose is working and ui is exposed on port 3000. elasticsearch and ngnix are still not connected.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,22 @@
-FROM python:3.7.2
+FROM python:3.8
 
 # Setup a spot for the api code
 WORKDIR /usr/local/src/app/backend
 
-# Install Python dependencies
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install poetry
+
+COPY poetry.lock .
+COPY pyproject.toml .
+
+# Project initialization:
+RUN poetry config virtualenvs.create false \
+  && poetry install --no-interaction --no-ansi
 
 # Copy over the source code
 COPY . .
 
+EXPOSE 8888
+
 # Kick things off
-ENTRYPOINT [ "python3" ]
-CMD ["app.py", "--host", "0.0.0.0"]
+ENTRYPOINT [ "poetry" ]
+CMD ["run", "python", "app.py", "--host", "0.0.0.0"]
