--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
             # makes debugging easier.
             - PYTHONUNBUFFERED=1
             - LOG_LEVEL=DEBUG
+            - ELASTICSEARCH_HOST=elasticsearch
         # command: ["main:app", "--host", "0.0.0.0", "--reload"]
         ports:
             - 8888:8888
@@ -17,11 +18,13 @@ services:
         # We can't mount the entire UI directory, since JavaScript dependencies
         # (`node_modules`) live at that location.
         volumes:
-            - .ui/src:/usr/local/src/app/ui/src
-            - .ui/public:/usr/local/src/app/ui/public
-            - .ui/package.json:/usr/local/src/ui/app/package.json
-            - .ui/tsconfig.json:/usr/local/src/ui/app/tsconfig.json
-            - .ui/yarn.lock:/usr/local/src/ui/app/yarn.lock
+            - ./ui/src:/usr/local/src/app/ui/src
+            - ./ui/public:/usr/local/src/app/ui/public
+            - ./ui/package.json:/usr/local/src/app/ui/package.json
+            - ./ui/tsconfig.json:/usr/local/src/app/ui/tsconfig.json
+            - ./ui/yarn.lock:/usr/local/src/app/ui/yarn.lock
+        environment: 
+            - ELASTICSEARCH_HOST=elasticsearch
         ports:
             - 3000:3000
     # proxy:
@@ -31,3 +34,12 @@ services:
     #     depends_on:
     #         - ui
     #         - backend
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.2
+        volumes: 
+            - ./elasticsearch_data:/usr/share/elasticsearch/data
+        environment: 
+            - discovery.type=single-node
+        ports: 
+            - 9200:9200
+            - 9300:9300
