--- a/proxy/local.conf
+++ b/proxy/local.conf
@@ -7,18 +7,18 @@ server {
     expires -1;
 
     location / {
-        proxy_pass http://ui:3000;
+        proxy_pass http://frontend:3000;
     }
 
     # This allows a websocket connection between the client and the webpack development server,
     # so that webpack can reload the developer's browser after they make changes.
     location /sockjs-node {
-        proxy_pass http://ui:3000;
+        proxy_pass http://frontend:3000;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
 
-    location /api {
-        proxy_pass http://api:8000;
+    location /data {
+        proxy_pass http://backend:8888;
     }
 }
