in docker, generate openapi files before starting dev server

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,8 @@ services:
             - ELASTICSEARCH_HOST=elasticsearch
         ports:
             - 3000:3000
+        depends_on: 
+            - backend
     proxy:
         build: ./proxy
         ports:
