--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
         "material-ui-chip-input": "^1.1.0",
+        "node-fetch": "^2.6.1",
         "query-string": "^6.5.0",
         "react": "^17.0.2",
         "react-debounce-input": "^3.2.0",
@@ -39,6 +40,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "generateAndStart": "node ./scripts/generateAPI.js && yarn start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint . --ext .ts,.tsx"
