--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ fastapi = "^0.68.0"
 gensim = "^4.0.1"
 aioelasticsearch = "^0.7.0"
 uvicorn = "^0.14.0"
+mysql-connector = "^2.2.9"
+elasticsearch-dsl = "^7.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
