--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
         "react": "^17.0.2",
         "react-debounce-input": "^3.2.0",
         "react-dom": "^17.0.2",
+        "react-flip-move": "^3.0.4",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
