--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.9.7",
+        "@emotion/react": "^11.4.1",
+        "@emotion/styled": "^11.3.0",
+        "@material-ui/core": "^5.0.0-beta.4",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/styles": "^5.0.0-beta.4",
         "@reduxjs/toolkit": "^1.6.1",
         "@types/d3": "^7.0.0",
         "@types/jest": "24.0.12",
@@ -13,15 +16,10 @@
         "@types/react-dom": "^17.0.9",
         "@types/react-router-dom": "^4.3.3",
         "@types/redux-logger": "^3.0.9",
-        "@vx/mock-data": "^0.0.189",
-        "@vx/scale": "^0.0.190",
         "classnames": "^2.2.6",
         "d3": "^5.9.2",
-        "highcharts": "^7.1.1",
-        "highcharts-react-official": "^2.1.3",
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
-        "material-ui-chip-input": "^1.1.0",
         "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-debounce-input": "^3.2.0",
