fixed poetry dependencies

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ aioelasticsearch = "^0.7.0"
 uvicorn = "^0.14.0"
 mysql-connector = "^2.2.9"
 elasticsearch-dsl = "^7.4.0"
+aiofiles = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
