bug fixes. allow loading elasticsearch data from CSV file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,8 +47,8 @@ services:
             - ./elasticsearch_data:/usr/share/elasticsearch/data
         environment: 
             - discovery.type=single-node
-        # ports: 
-        #     - 9200:9200
-        #     - 9300:9300
+        ports: 
+            - 9200:9200
+            - 9300:9300
 volumes:
     docker_openapi:
