--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
         "recharts": "^2.0.10",
         "redux-logger": "^3.0.6",
         "typescript": "^4.2.4",
-        "use-constant": "^1.1.0"
+        "use-constant": "^1.1.0",
+        "use-memo-one": "^1.1.2"
     },
     "scripts": {
         "start": "react-scripts start",
