--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
         "query-string": "^7.0.1",
+        "re-reselect": "^4.0.0",
         "react": "^17.0.2",
         "react-async-hook": "^3.6.2",
         "react-debounce-input": "^3.2.0",
