--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,7 @@
         "react-window-infinite-loader": "^1.0.7",
         "recharts": "^2.0.10",
         "redux-logger": "^3.0.6",
-        "typescript": "^4.2.4",
-        "use-memo-one": "^1.1.2"
+        "typescript": "^4.2.4"
     },
     "scripts": {
         "start": "react-scripts start",
