--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,13 +29,13 @@
         "react-debounce-input": "^3.2.0",
         "react-dom": "^17.0.2",
         "react-flip-move": "^3.0.4",
+        "react-move": "^6.5.0",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.2",
         "react-window": "^1.8.6",
         "react-window-infinite-loader": "^1.0.7",
-        "recharts": "^2.1.2",
         "redux-logger": "^3.0.6",
         "typescript": "^4.2.4"
     },
