--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ mysql-connector = "^2.2.9"
 elasticsearch-dsl = "^7.4.0"
 aiofiles = "^0.7.0"
 matplotlib = "^3.4.3"
+humanfriendly = "^9.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
