--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,9 @@ mysql-connector = "^2.2.9"
 elasticsearch-dsl = "^7.4.0"
 aiofiles = "^0.7.0"
 matplotlib = "^3.4.3"
+fuzzywuzzy = "^0.18.0"
+thefuzz = "^0.19.0"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
