--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
         "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^5.0.0-beta.4",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^5.0.0-alpha.44",
         "@material-ui/styles": "^5.0.0-beta.4",
+        "@mui/icons-material": "^5.0.0",
+        "@mui/material": "^5.0.0",
         "@reduxjs/toolkit": "^1.6.1",
         "@types/d3": "^7.0.0",
         "@types/jest": "24.0.12",
@@ -22,13 +25,16 @@
         "d3": "7.0.1",
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
+        "motion": "^10.0.1",
         "query-string": "^7.0.1",
         "re-reselect": "^4.0.0",
         "react": "^17.0.2",
         "react-async-hook": "^3.6.2",
         "react-debounce-input": "^3.2.0",
         "react-dom": "^17.0.2",
+        "react-easy-flip": "^4.0.3",
         "react-flip-move": "^3.0.4",
+        "react-flip-toolkit": "^7.0.13",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
@@ -64,7 +70,6 @@
     "devDependencies": {
         "@types/autosuggest-highlight": "^3.1.1",
         "@types/react-window-infinite-loader": "^1.0.4",
-        "@types/recharts": "^2.0.0",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
         "eslint": "^7.32.0",
