a few minor bug fixes and updates. change title. impose memory limit for elasticsearch service.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,5 +50,9 @@ services:
         ports: 
             - 127.0.0.1:9200:9200
             - 127.0.0.1:9300:9300
+        deploy:
+            resources:
+                limits:
+                    memory: 1G
 volumes:
     docker_openapi:
