--- a/proxy/prod.conf
+++ b/proxy/prod.conf
@@ -6,14 +6,11 @@ server {
 
     expires -1;
 
-    root /var/www/skiff/ui/build;
-    index index.html;
-
     location / {
-        try_files $uri /index.html;
+        proxy_pass http://frontend-prod:3000;
     }
 
-    location /api {
-        proxy_pass http://localhost:8000;
+    location /data {
+        proxy_pass http://backend:8888;
     }
 }
