--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,12 +48,13 @@ services:
             - ./elasticsearch_data:/usr/share/elasticsearch/data
         environment: 
             - discovery.type=single-node
+            - cluster.routing.allocation.disk.threshold_enabled=false
         ports: 
             - 127.0.0.1:9200:9200
             - 127.0.0.1:9300:9300
-        deploy:
-            resources:
-                limits:
-                    memory: 1G
+        # deploy:
+        #     resources:
+        #         limits:
+        #             memory: 1G
 volumes:
     docker_openapi:
