--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,9 +46,10 @@ services:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.14.0
         volumes: 
             - ./elasticsearch_data:/usr/share/elasticsearch/data
+            - ./elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
         environment: 
             - discovery.type=single-node
-            - cluster.routing.allocation.disk.threshold_enabled=false
+            # - cluster.routing.allocation.disk.threshold_enabled=false
         ports: 
             - 127.0.0.1:9200:9200
             - 127.0.0.1:9300:9300
