--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# TODO consider excluding this
-# src/api
+frontend/src/api
 
 elasticsearch_data/*
 
