--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -13,6 +13,10 @@ services:
             - LOG_LEVEL=DEBUG
             - DEV_MODE=1
             - ELASTICSEARCH_HOST=elasticsearch
+        networks:
+            default:
+                aliases:
+                    - backend
         # command: ["main:app", "--host", "0.0.0.0", "--reload"]
         # ports:
         #     - 8888:8888
@@ -24,6 +28,10 @@ services:
             - ELASTICSEARCH_HOST=elasticsearch
         # ports:
         #     - 3000:3000
+        networks:
+            default:
+                aliases:
+                    - frontend
         depends_on: 
             - backend-prod
     proxy:
