--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -13,6 +13,7 @@ services:
             - LOG_LEVEL=DEBUG
             - DEV_MODE=1
             - ELASTICSEARCH_HOST=elasticsearch
+            - WORD_VECTORS_FILENAME=${WORD_VECTORS_FILENAME}
         networks:
             default:
                 aliases:
