--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
         "react-window": "^1.8.6",
         "react-window-infinite-loader": "^1.0.7",
         "redux-logger": "^3.0.6",
-        "typescript": "^4.2.4"
+        "typescript": "^4.2.4",
+        "use-query-params": "^1.2.3"
     },
     "scripts": {
         "start": "react-scripts start",
