--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
         "@material-ui/lab": "^5.0.0-alpha.44",
         "@material-ui/styles": "^5.0.0-beta.4",
         "@mui/icons-material": "^5.0.0",
+        "@mui/lab": "^5.0.0-alpha.66",
         "@mui/material": "^5.0.0",
         "@reduxjs/toolkit": "^1.6.1",
         "@types/d3": "^7.0.0",
@@ -34,6 +35,7 @@
         "react-easy-flip": "^4.0.3",
         "react-flip-move": "^3.0.4",
         "react-flip-toolkit": "^7.0.13",
+        "react-query": "^3.34.12",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
