--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
         "@types/react-router-dom": "^4.3.3",
+        "@types/react-window-infinite-loader": "^1.0.4",
         "@types/redux-logger": "^3.0.9",
         "autosuggest-highlight": "^3.1.1",
         "awesome-debounce-promise": "^2.1.0",
@@ -47,7 +48,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "generate": "orval --config ../orval.config.js",
-        "generateAndStart": "orval --config ../orval.config.js && yarn start",
+        "generateAndStart": "node ./scripts/generateAPI.mjs && orval --config ./orval.config.js && yarn start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint . --ext .ts,.tsx"
@@ -69,7 +70,6 @@
     },
     "devDependencies": {
         "@types/autosuggest-highlight": "^3.1.1",
-        "@types/react-window-infinite-loader": "^1.0.4",
         "@typescript-eslint/eslint-plugin": "^4.29.0",
         "@typescript-eslint/parser": "^4.29.0",
         "eslint": "^7.32.0",
