--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,10 @@ matplotlib = "^3.4.3"
 fuzzywuzzy = "^0.18.0"
 thefuzz = "^0.19.0"
 tqdm = "^4.62.3"
+requests = "^2.27.1"
+sklearn = "^0.0"
+scikit-learn = "^1.0.2"
+spacy = "^3.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
