--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
         "@mui/icons-material": "^5.0.0",
         "@mui/lab": "^5.0.0-alpha.66",
         "@mui/material": "^5.0.0",
+        "@types/animejs": "^3.1.4",
         "@types/d3": "^7.0.0",
         "@types/jest": "24.0.12",
         "@types/node": "^12.0.0",
@@ -19,21 +20,17 @@
         "@types/react-router-dom": "^4.3.3",
         "@types/react-window-infinite-loader": "^1.0.4",
         "@types/redux-logger": "^3.0.9",
+        "animejs": "^3.2.1",
         "autosuggest-highlight": "^3.1.1",
-        "awesome-debounce-promise": "^2.1.0",
         "axios": "^0.25.0",
         "classnames": "^2.2.6",
         "d3": "7.0.1",
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
-        "motion": "^10.0.1",
+        "motion": "^10.6.2",
         "query-string": "^7.0.1",
         "react": "^17.0.2",
-        "react-async-hook": "^3.6.2",
-        "react-debounce-input": "^3.2.0",
         "react-dom": "^17.0.2",
-        "react-easy-flip": "^4.0.3",
-        "react-flip-move": "^3.0.4",
         "react-flip-toolkit": "^7.0.13",
         "react-query": "^3.34.12",
         "react-router": "^5.2.0",
