--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
-        "@types/react-router-dom": "^4.3.3",
+        "@types/react-router": "^5.1.18",
+        "@types/react-router-dom": "^5.3.3",
         "@types/react-window-infinite-loader": "^1.0.4",
         "@types/redux-logger": "^3.0.9",
         "animejs": "^3.2.1",
@@ -28,13 +29,13 @@
         "history": "^4.9.0",
         "hoist-non-react-statics": "^3.3.0",
         "motion": "^10.6.2",
-        "query-string": "^7.0.1",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-flip-toolkit": "^7.0.13",
         "react-query": "^3.34.12",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
+        "react-router": "^5.3.1",
+        "react-router-dom": "^5.3.1",
         "react-scripts": "4.0.2",
         "react-window": "^1.8.6",
         "react-window-infinite-loader": "^1.0.7",
