--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,9 @@
     "dependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^5.0.0-beta.4",
-        "@material-ui/lab": "^5.0.0-alpha.44",
-        "@material-ui/styles": "^5.0.0-beta.4",
-        "@mui/icons-material": "^5.0.0",
-        "@mui/lab": "^5.0.0-alpha.66",
-        "@mui/material": "^5.0.0",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/lab": "^5.0.0-alpha.91",
+        "@mui/material": "^5.9.1",
         "@mui/styles": "^5.9.1",
         "@types/animejs": "^3.1.4",
         "@types/d3": "^7.0.0",
@@ -50,6 +47,7 @@
         "generateAndStart": "node ./scripts/generateAPI.mjs && orval --config ./orval.config.js && yarn start",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "prettier": "prettier --write ./src",
         "lint": "eslint . --ext .ts,.tsx"
     },
     "eslintConfig": {
